2010-06-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c: Deal with formats which don't have an extension
	by prepending the magic specifier to the file name specification.

	* coders/mpr.c (RegisterMPRImage): MPR and MPRI are not useful
	file extensions.

	* magick/command.c (CommandAccessMonitor): If the environment
	variable MAGICK_ACCESS_MONITOR is set to TRUE then also log
	invocations of the access monitor callback when -monitor is
	specified.  This feature is intended to assist with understanding
	when the access monitor is invoked, and the arguments which are
	passed.

	* magick/blob.c (OpenBlob): Throw an exception on error rather
	than depending on the invoking code to do so.  Resolves
	SourceForge bug #3023437 "Magick::Image::ping() does not throw
	exception in all cases".

2010-06-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (MogrifyImage): The -colors, -map, and
	-monochrome options now take effect immediately rather than at the
	end of all other processing.  This is is more intuitive and
	reasonable but may impact the output of scripts which place these
	options prior to additional image processing operations.

2010-06-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (BlobToImage): If a temporary file must be used
	and the user has specified magic, then preserve the magic
	specifier when reading the temporary file.

	* coders/mat.c (RegisterMATImage): More accurately describe MATLAB
	format support as "MATLAB Level 5".

	* magick/magic.c (StaticMagic): Automatically detect MATLAB Level
	5 format based on file header.

	* PerlMagick/PerlMagickCheck.sh.in: Run PerlMagick tests in
	verbose mode so that all test output appears in "test-suite.log"
	if there is a failure.

	* coders/Makefile.am (coders_mat_la_LIBADD): MAT coder is
	optionally dependent on zlib so zlib should be listed as a
	dependency.

	* magick/blob.c (BlobToFile): MAGICK_IO_FSYNC=TRUE in the