@@ -21,6 +21,16 @@
 </tr>
 </table>
 <p>
+2010-07-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/tiff.c (LOG_TIFF_BLOB_IO): Define LOG_TIFF_BLOB_IO=1 when
+        building GraphicsMagick in order to enable verbose logging from
+        the TIFFClientOpen() registered callbacks when 'coder' logging is
+        enabled.
+
+</UL>
+<p>
 2010-06-30  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
